--- a/simpleApp/simpleApp.csproj
+++ b/simpleApp/simpleApp.csproj
@@ -225,6 +225,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="js\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
