--- a/New folder/simpleApp/Web.config
+++ b/New folder/simpleApp/Web.config
@@ -15,6 +15,8 @@
   <connectionStrings>
     <add name="ConnectionToPoweredPIK" connectionString="Dsn=PoweredPik;uid=poweredpik;pwd=poweredpik"
       providerName="System.Data.Odbc" />
+    <add name="ConnectToPoweredPik" connectionString="Dsn=PoweredPik;uid=poweredpik;pwd=poweredpik"
+      providerName="System.Data.Odbc" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1">
