--- a/New folder/simpleApp/simpleApp.csproj
+++ b/New folder/simpleApp/simpleApp.csproj
@@ -143,6 +143,7 @@
     <Content Include="js\practicejs.js" />
     <Content Include="nestedGridPractice.aspx" />
     <Content Include="nestedGridview.aspx" />
+    <Content Include="PTLBrowse.aspx" />
     <Content Include="WebForm1.aspx" />
     <Content Include="WebForm2.aspx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -222,6 +223,13 @@
       <DependentUpon>nestedGridview.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PTLBrowse.aspx.cs">
+      <DependentUpon>PTLBrowse.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PTLBrowse.aspx.designer.cs">
+      <DependentUpon>PTLBrowse.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
