--- a/New folder/simpleApp/simpleApp.csproj
+++ b/New folder/simpleApp/simpleApp.csproj
@@ -140,6 +140,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="index.html" />
     <Content Include="js\practicejs.js" />
     <Content Include="nestedGridPractice.aspx" />
     <Content Include="nestedGridview.aspx" />
