--- a/New folder/simpleApp/simpleApp.csproj
+++ b/New folder/simpleApp/simpleApp.csproj
@@ -121,6 +121,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="calling DB to change page.aspx" />
     <Content Include="ConsolidationBrowse.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -185,6 +186,13 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="calling DB to change page.aspx.cs">
+      <DependentUpon>calling DB to change page.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="calling DB to change page.aspx.designer.cs">
+      <DependentUpon>calling DB to change page.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ConsolidationBrowse.aspx.cs">
       <DependentUpon>ConsolidationBrowse.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
