--- a/New folder/simpleApp/Web.config
+++ b/New folder/simpleApp/Web.config
@@ -31,7 +31,11 @@
 				<add assembly="DevExpress.Web.ASPxThemes.v19.1, Version=19.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
 				<add assembly="DevExpress.XtraCharts.v19.1.Web, Version=19.1.5.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
 				<add assembly="DevExpress.XtraCharts.v19.1, Version=19.1.5.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
-				<add assembly="DevExpress.Charts.v19.1.Core, Version=19.1.5.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/></assemblies>
+				<add assembly="DevExpress.Charts.v19.1.Core, Version=19.1.5.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
+				<add assembly="DevExpress.Web.Bootstrap.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
+				<add assembly="DevExpress.Web.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
+				<add assembly="DevExpress.Data.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
+				<add assembly="DevExpress.Web.Resources.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/></assemblies>
 		</compilation>
 		<httpRuntime targetFramework="4.6.1"/>
 		<pages>
